--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
     @font-face {
       font-family: 'Determination';
-      src: url('https://raw.githubusercontent.com/projectechou/projectecho.github.io/main/determination.ttf') format('truetype');
+      src: url('../assets/fonts/determination.ttf') format('truetype');
       font-display: swap;
     }
 
